--- a/tutor.html
+++ b/tutor.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutors and Availability</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #FFD73A;
+        }
+
+        header {
+         
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 40px;
+        }
+</style>
 </head>
 <body>
     <h1>Available Tutors</h1>
