--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,18 @@
    
-   
+   <style>
+
+section {
+    padding: 40px;
+    margin: 20px auto;
+    width: 90%;
+    max-width: 800px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+</style>
    <section id="home">
         <h2>Welcome to Dal Tutoring Services</h2>
         <p>Connecting students with expert tutors in various subjects.</p>
