--- a/public/search.html
+++ b/public/search.html
@@ -6,9 +6,7 @@
     <title>Course Search</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             text-align: center;
-            padding: 20px;
         }
         input {
             width: 60%;
@@ -22,6 +20,8 @@
             color: white;
             border: none;
             cursor: pointer;
+            padding-bottom: 20px;
+
         }
         ul {
             list-style-type: none;
@@ -35,6 +35,8 @@
             text-align: left;
             background-color: #f9f9f9;
         }
+
+
     </style>
 </head>
 <body>
@@ -80,6 +82,7 @@
 
                 const button = document.createElement("button");
                 button.textContent = "Book an Appointment";
+                button.classList.add("book-button");
                 button.onclick = () => bookAppointment(course.tutor);
 
                 li.appendChild(tutorName);
