Fixed the 'book a session' button href.

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@ input {
     <div class="main-content">
         <div class="text-section">
             <h1>Dalhousie<br>Tutoring Services</h1>
-            <a class="book-button" href="tutor.html">Book a session</a>
+            <a class="book-button" href="/tutor">Book a session</a>
         </div>
     
         <div class="homepage-img">
