--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,27 @@ input {
             border-radius: 8px;
         }
 
+        /* Media query for tablets */
+@media (min-width: 600px) and (max-width: 1024px) {
+    
+    body {
+            margin: 10px 20px 20px 10px;
+            padding: 0;
+            background-color: #FFD73A;
+            font-family: 'Georgia', serif;
+            color: #111;
+        }
+
+    .homepage-img img{
+        width: 350px;
+    }
+
+    .text-section{
+        padding-right: 30px;
+    }
+
+}
+
 
 
 </style>
