--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@ input {
         }
 
         /* Media query for tablets */
-@media (min-width: 600px) and (max-width: 1024px) {
+    @media (min-width: 600px) and (max-width: 1024px) {
     
     body {
             margin: 10px 20px 20px 10px;
@@ -103,6 +103,58 @@ input {
         padding-right: 30px;
     }
 
+}
+ /* Media query for Phone */
+@media (min-width: 320px) and (max-width: 750px){
+    body {
+            margin: 5px 10px 10px 5px;
+            padding: 0;
+            background-color: #FFD73A;
+            font-family: 'Georgia', serif;
+            color: #111;
+        }
+    .homepage-img img{
+        width: 200px;
+    }
+
+    .text-section{
+        padding-right: 15px;
+    }
+    body {
+        font-size: 12px;
+    }
+    .main-content {
+        padding: 20px;
+    }
+    h1 {
+        font-size: 6px;
+    }
+    .text-section h1 {
+            font-size: 19px;
+            margin: 0;
+        }
+
+        .book-button {
+            display: inline-block;
+            margin-top: 20px;
+            background-color: #111;
+            color: white;
+            padding: 8px 20px;
+            border-radius: 20px;
+            font-size: 9px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        section {
+            padding: 20px;
+            margin: 20px auto;
+            width: 90%;
+            max-width: 800px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
 }
 
 
